--- a/template/cart_checkout.htm
+++ b/template/cart_checkout.htm
@@ -1,2 +1,99 @@
 结算
 收货人信息
+<!--{template common/header}-->
+<style type="text/css">
+.tl{padding-top: 10px;}
+.tl .bm_c {padding-top:0;}
+.tl table {width:100%;table-layout:fixed;border-collapse:separate;}
+.tl th, .tl td {padding:5px 0;border-bottom:1px solid #C2D5E3;}
+.emptb th, .emptb td {padding:0;border-bottom:none;}
+.tl tr:hover th, .tl tr:hover td {background-color:#F2F2F2;}
+.tl th {padding-right:1.5em;zoom:1;}
+.tl th a:visited {color:#666;}
+.fromg {visibility:hidden;}
+.ie6 .fromg, tr:hover .fromg {visibility:visible;}
+.tl .icn {padding-left:5px;width:25px;text-align:left;}
+.tl .frm {width:150px;}
+.tl .o {width:20px;}
+.tl .num {width:60px;line-height:18px;}
+.tl .by {width:105px;line-height:18px;}
+.tl .by b{color:#06F;font-size: 16px;}
+.tl cite, .tl .num em {display:block;}
+.tl th em {margin-right:4px;zoom:1;}
+.tl th em, .tl th em a {color:#007CD5;}
+.tl td em {font-size:11px;font-family:Arial, PMingliu, sans-serif;-webkit-text-size-adjust:none;}
+.tl td em, .tl td em a {color:#999;}
+.tl .ts th, .tl .ts td {padding:3px 0;border-bottom-color:#CDCDCD;background:#F2F2F2;}
+.tl .th {margin-top:1px;padding:0 10px;border-bottom:1px solid #CDCDCD;background:#F2F2F2;}
+.tl .th table {border:none;}
+.tl .th td, .tl .th th {height:20px;border:none;vertical-align:baseline;}
+.tl .tf {padding:3px 0;}
+</style>
+<div id="pt" class="bm cl">
+	<!--{subtemplate common/simplesearchform}-->
+	<div class="z">
+		<a href="/" class="nvhm" title="{lang homepage}">$_G[setting][bbname]</a> <em>&rsaquo;</em>
+		<a href="plugin.php?id=etuan:cart">{lang etuan:my_cart}</a>
+		<a href="plugin.php?id=etuan:cart&op=checkout">{lang etuan:my_cart}</a>
+	</div>
+</div>
+
+
+<div id="ct" class="ct2_a wp cl">
+	<div class="mn">
+		<div class="bm bw0">
+			<!--{if $cart_items_group_by_tuan}-->
+			<!--{loop $cart_items_group_by_tuan $tuan_cart_items}-->
+			<h1 class="mt"><img alt="thread" src="static/image/feed/thread.gif" class="vm" /> >{$tuan_cart_items[tuan][name]}</h1>
+			<div class="tl">
+					<table cellspacing="0" cellpadding="0">
+						<tr class="th">
+							<td class="icn">&nbsp;</td>
+							<th>{lang etuan:cart_product}</th>
+							<td>{lang etuan:cart_quantity}</td>
+							<td>{lang etuan:cart_unit_price}</td>
+							<td>{lang etuan:cart_price}</td>
+							<td class="num">{lang etuan:my_operation}</td>
+						</tr>
+						<!--{if $tuan_cart_items[items]}-->
+							<!--{loop $tuan_cart_items[items] $cart_item}-->
+							<tr>
+								<td class="icn"><a href="forum.php?mod=viewthread&tid=$thread[tid]" target="_blank"> <img src="static/image/common/folder_new.gif" /> </a></td>
+								<th> <a href="forum.php?mod=viewthread&tid=$thread[tid]" target="_blank">$thread[subject]</a> </th>
+								<td>{$cart_item['quantity']}</td>
+								<td class="num">{$cart_item['unit_price']}</td>
+								<td class="by">{$cart_item['price']}</td>
+								<td class="num"><a href="plugin.php?id=etuan:cart&op=delete&tuan_id={$cart_item[tuan_id]}&product_id={$cart_item[product_id]}" class="xi2">{lang etuan:cart_remove_product}</a></td>
+							</tr>
+							<!--{/loop}-->
+						<!--{else}-->
+							<tr>
+								<td colspan="5"><p class="emp">{lang etuan:cart_is_empty}</p></td>
+							</tr>
+						<!--{/if}-->
+					</table>
+				</div>
+
+			</div>
+			<!--{/loop}-->
+			<!--{else}-->
+			<p>{lang etuan:cart_is_empty}</p>
+<!--{/if}-->
+</div>
+	</div>
+	<div class="appl">
+		<div class="tbn">
+			<h2 class="mt bbda">{lang etuan:other_product_in_this_tuan}</h2>
+			<ul>
+				<li><a href="plugin.php?id=etuan:my&app=order">{lang etuan:my_order}</a></li>
+				<li><a href="plugin.php?id=etuan:my&app=address">{lang etuan:my_address}</a></li>
+			</ul>
+			<h2 class="mt bbda">{lang etuan:other_product_in_tuan}</h2>
+			<ul>
+				<li><a href="plugin.php?id=etuan:my&app=order">{lang etuan:my_order}</a></li>
+				<li><a href="plugin.php?id=etuan:my&app=address">{lang etuan:my_address}</a></li>
+			</ul>
+		</div>
+	</div>
+</div>
+<!--{template common/footer}-->
