--- a/template/cart_view.htm
+++ b/template/cart_view.htm
@@ -43,8 +43,7 @@
 			<div class="tl">
 					<table cellspacing="0" cellpadding="0">
 						<tr class="th">
-							<td class="icn">&nbsp;</td>
-							<th>{lang etuan:cart_product}</th>
+							<td>{lang etuan:cart_product}</td>
 							<td>{lang etuan:cart_quantity}</td>
 							<td>{lang etuan:cart_unit_price}</td>
 							<td>{lang etuan:cart_price}</td>
@@ -53,13 +52,12 @@
 					<!--{if $cart_items_group_by_tuan}-->
 					<!--{loop $cart_items_group_by_tuan $tuan_cart_items}-->
 						<tr class="th">
-							<td colspan="5">{$tuan_cart_items[tuan][name]}</td>
+							<td colspan="5"><a href="forum.php?mod=viewthread&tid=$tuan_cart_items[tuan][tid]" target="_blank">{$tuan_cart_items[tuan][name]}</a> </td>
 						</tr>
 						<!--{if $tuan_cart_items[items]}-->
 							<!--{loop $tuan_cart_items[items] $cart_item}-->
 							<tr>
-								<td class="icn"><a href="forum.php?mod=viewthread&tid=$thread[tid]" target="_blank"> <img src="static/image/common/folder_new.gif" /> </a></td>
-								<th> <a href="forum.php?mod=viewthread&tid=$thread[tid]" target="_blank">$thread[subject]</a> </th>
+								<td>{$cart_item[product][name]}</td>
 								<td>{$cart_item['quantity']}</td>
 								<td class="num">{$cart_item['unit_price']}</td>
 								<td class="by">{$cart_item['price']}</td>
