--- a/template/my_product_add.htm
+++ b/template/my_product_add.htm
@@ -37,7 +37,14 @@
 		</tr>
 <tr>
 <td height="35" align="right">{lang etuan:my_product_supplier}: <span class="rq">*</span></td>
-<td><input name="supplier_id" id="supplier_id" type="text" class="px" size="20" value="{$row['supplier_id']}" /></td>
+<td>
+
+<select name="supplier_id" id="supplier_id" width="60" class="ps" selecti="0">
+<!--{loop $suppliers $supplier}-->
+	<option value="{$supplier[id]}"<!--{if $supplier[id]==$row['supplier_id']}--> selected="true"<!--{/if}-->>{$supplier[name]}</option>
+<!--{/loop}-->
+</select>
+</td>
 </tr>
 <tr>
 <td height="35" align="right">{lang etuan:my_product_name}: <span class="rq">*</span></td>
