--- a/template/my_tuan_view.htm
+++ b/template/my_tuan_view.htm
@@ -41,11 +41,8 @@
 	<div class="mn">
 		<div class="bm bw0">
 			<h1 class="mt"><img alt="thread" src="static/image/feed/thread.gif" class="vm" /> {$tuan_thread[subject]}{$tuan_thread[intro]}</h1>
-			<ul class="tb cl">
-				<li $orderactives[all]><a href="plugin.php?id=etuan:my&app=tuan">{lang all}</a></li>
-				<li $orderactives[ing]><a href="plugin.php?id=etuan:my&app=tuan&filter=ing">{lang etuan:my_tuan_ing}</a></li>
-				<li $orderactives[over]><a href="plugin.php?id=etuan:my&app=tuan&filter=over">{lang etuan:my_tuan_over}</a></li>
-			</ul><div class="tl">
+
+			<div class="tl">
 								<table cellspacing="0" cellpadding="0">
 						<tr class="th">
 							<td class="icn">&nbsp;</td>
