--- a/template/my_supplier_add.htm
+++ b/template/my_supplier_add.htm
@@ -38,62 +38,58 @@
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_name}: <span class="rq">*</span></td>
 <td><input name="name" id="name" type="text" class="px" size="20" value="{$row['name']}" /></td>
-</tr>
-<tr>
 <td height="35" align="right">{lang etuan:my_supplier_phone}: <span class="rq">*</span></td>
-<td><input name="phone" id="phone" type="text" class="px" size="20" value="{$row['phone']}" /></td>
-</tr>
+<td><input name="phone" id="phone" type="text" class="px" size="20" value="{$row['phone']}" /></td></tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_address}: <span class="rq">*</span></td>
-<td><input name="address" id="address" type="text" class="px" size="20" value="{$row['address']}" /></td>
-</tr>
+<td colspan="3"><input name="address" id="address" type="text" class="px" size="20" value="{$row['address']}" /></td></tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_logo}: <span class="rq">*</span></td>
-<td><input name="logo" id="logo" type="text" class="px" size="20" value="{$row['logo']}" /></td>
-</tr>
+<td colspan="3"><input name="logo" id="logo" type="text" class="px" size="20" value="{$row['logo']}" /></td></tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_contact_name}: <span class="rq">*</span></td>
 <td><input name="contact_name" id="contact_name" type="text" class="px" size="20" value="{$row['contact_name']}" /></td>
-</tr>
-<tr>
-<td height="35" align="right">{lang etuan:my_supplier_contact_gender}: <span class="rq">*</span></td>
-<td><input name="contact_gender" id="contact_gender" type="text" class="px" size="20" value="{$row['contact_gender']}" /></td>
-</tr>
-<tr>
-<td height="35" align="right">{lang etuan:my_supplier_contact_phone}: <span class="rq">*</span></td>
-<td><input name="contact_phone" id="contact_phone" type="text" class="px" size="20" value="{$row['contact_phone']}" /></td>
-</tr>
-<tr>
 <td height="35" align="right">{lang etuan:my_supplier_contact_qq}: <span class="rq">*</span></td>
 <td><input name="contact_qq" id="contact_qq" type="text" class="px" size="20" value="{$row['contact_qq']}" /></td>
 </tr>
+
+<tr>
+<td height="35" align="right">{lang etuan:my_supplier_contact_gender}: <span class="rq">*</span></td>
+<td><input name="contact_gender" id="contact_gender" type="text" class="px" size="20" value="{$row['contact_gender']}" /></td>
+<td height="35" align="right">{lang etuan:my_supplier_contact_phone}: <span class="rq">*</span></td>
+<td><input name="contact_phone" id="contact_phone" type="text" class="px" size="20" value="{$row['contact_phone']}" /></td></tr>
+
+<tr>
+<td height="35" align="right">{lang etuan:my_supplier_second_contact_name}: <span class="rq">*</span></td>
+<td><input name="second_contact_name" id="second_contact_name" type="text" class="px" size="20" value="{$row['second_contact_name']}" /></td>
+<td height="35" align="right">{lang etuan:my_supplier_second_contact_phone}: <span class="rq">*</span></td>
+<td><input name="second_contact_phone" id="second_contact_phone" type="text" class="px" size="20" value="{$row['second_contact_phone']}" /></td>
+</tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_cate}: <span class="rq">*</span></td>
 <td><input name="cate" id="cate" type="text" class="px" size="20" value="{$row['cate']}" /></td>
-</tr>
-<tr>
 <td height="35" align="right">{lang etuan:my_supplier_website}: <span class="rq">*</span></td>
-<td><input name="website" id="website" type="text" class="px" size="20" value="{$row['website']}" /></td>
-</tr>
+<td><input name="website" id="website" type="text" class="px" size="20" value="{$row['website']}" /></td></tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_tax_license}: <span class="rq">*</span></td>
 <td><input name="tax_license" id="tax_license" type="text" class="px" size="20" value="{$row['tax_license']}" /></td>
-</tr>
-<tr>
 <td height="35" align="right">{lang etuan:my_supplier_speed_rating}: <span class="rq">*</span></td>
-<td><input name="speed_rating" id="speed_rating" type="text" class="px" size="20" value="{$row['speed_rating']}" /></td>
-</tr>
+<td><input name="speed_rating" id="speed_rating" type="text" class="px" size="20" value="{$row['speed_rating']}" /></td></tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_quality_rating}: <span class="rq">*</span></td>
 <td><input name="quality_rating" id="quality_rating" type="text" class="px" size="20" value="{$row['quality_rating']}" /></td>
-</tr>
-<tr>
 <td height="35" align="right">{lang etuan:my_supplier_service_rating}: <span class="rq">*</span></td>
-<td><input name="service_rating" id="service_rating" type="text" class="px" size="20" value="{$row['service_rating']}" /></td>
-</tr>
+<td><input name="service_rating" id="service_rating" type="text" class="px" size="20" value="{$row['service_rating']}" /></td></tr>
+
 <tr>
 <td height="35" align="right">{lang etuan:my_supplier_memo}: <span class="rq">*</span></td>
-<td><input name="memo" id="memo" type="text" class="px" size="20" value="{$row['memo']}" /></td>
+<td colspan="3"><input name="memo" id="memo" type="text" class="px" size="20" value="{$row['memo']}" /></td>
 </tr>
 
 	</table>
