--- a/template/tuan_viewthread.htm
+++ b/template/tuan_viewthread.htm
@@ -5,6 +5,7 @@
 <!--{loop $products $k $product}-->
 <div>
 	<h4>{$product[name]}({$product[price]})</h4>
+	<img src="{$product[photo]}">
 	<a href="">{lang etuan:tuan_thread_expand_product}</a>
 <a href="">{lang etuan:tuan_thread_collapse_product}</a>
 	<div>{$product[description]}</div>
