--- a/template/my_address.htm
+++ b/template/my_address.htm
@@ -1,15 +1,4 @@
 <!--{template common/header}-->
-<style type="text/css">
-.tl{padding-top: 10px;}
-.tl table {width:100%;table-layout:fixed;border-collapse:separate;}
-.tl th,.tl td {padding:12px 0;border-bottom:1px dashed #E5E5E5;}
-.tl tr.a th,.tl tr.a td {background-color: #F7F7F7;	}
-.tl .th {background:#F2F2F2;}
-.tl .th th,.tl .th td{border:none;padding: 8px 0px;}
-.tl .th th,.tl th{padding-left: 10px;}
-.tl td{text-align: center;}
-.actl{table-layout:fixed;margin:10px 0;border-top:3px solid #CDCDCD;}
-</style>
 <div id="pt" class="bm cl">
 	<!--{subtemplate common/simplesearchform}-->
 	<div class="z">
@@ -33,10 +22,9 @@
 			<div class="tl">
 					<table cellspacing="0" cellpadding="0">
 						<tr class="th">
+							<td>{lang etuan:my_address_community}</td>
+							<td>{lang etuan:my_address_address}</td>
 							<td>{lang etuan:my_address_name}</td>
-							<td>{lang etuan:my_address_area}</td>
-							<td>{lang etuan:my_address_street}</td>
-							<td>{lang etuan:my_address_zip}</td>
 							<td>{lang etuan:my_address_phone}</td>
 							<td>{lang etuan:my_address_email}</td>
 							<td>{lang etuan:my_operation}</td>
@@ -46,10 +34,9 @@
 						<!--{eval $i=0;}-->
 						<!--{loop $list $value}-->
 						<tr <!--{if $i%2==0}-->class="a"<!--{/if}--> id="_address_{$value[id]}">
-							<td>$value[name]</td>
-							<td>$value[province] $value[city] $value[town]</td>
+							<td>$value[community_id]</td>
 							<td>$value[address]</td>
-							<td>$value[zip]</td>
+							<td>$value[contact_name]</td>
 							<td>$value[phone]</td>
 							<td>$value[email]</td>
 							<td><a href="javascript:void(0);" onclick="showWindow('add_address', 'plugin.php?id=etuan:my&app=address&op=edit&addressid={$value[id]}', 'get', 0)" class="xi2">{lang edit}</a><span class="pipe">|</span><a href="javascript:void(0);" onclick="delete_address({$value[id]});" class="xi2">{lang delete}</a></td>
