--- a/template/my_order.htm
+++ b/template/my_order.htm
@@ -1,15 +1,4 @@
 <!--{template common/header}-->
-<style type="text/css">
-.tl{padding-top: 10px;}
-.tl table {width:100%;table-layout:fixed;border-collapse:separate;}
-.tl th,.tl td {padding:12px 0;border-bottom:1px dashed #E5E5E5;}
-.tl tr.a th,.tl tr.a td {background-color: #F7F7F7;	}
-.tl .th {background:#F2F2F2;}
-.tl .th th,.tl .th td{border:none;padding: 8px 0px;}
-.tl .th th,.tl th{padding-left: 10px;}
-.tl td{text-align: center;}
-.actl{table-layout:fixed;margin:10px 0;border-top:3px solid #CDCDCD;}
-</style>
 <div id="pt" class="bm cl">
 	<!--{subtemplate common/simplesearchform}-->
 	<div class="z">
@@ -38,12 +27,7 @@
 							<td>{lang etuan:my_order_tuan}</td>
 							<td>{lang etuan:my_order_bought_at}</td>
 							<td>{lang etuan:my_order_payment}</td>
-							<td>{lang etuan:my_order_address}</td>
-							<td>{lang etuan:my_order_paid_at}</td>
-							<td>{lang etuan:my_order_paid_amount}</td>
 							<td>{lang etuan:my_order_shipmethod}</td>
-							<td>{lang etuan:my_order_shipped_at}</td>
-							<td>{lang etuan:my_order_received_at}</td>
 							<td>{lang etuan:my_order_product_fee}</td>
 							<td>{lang etuan:my_order_ship_fee}</td>
 							<td>{lang etuan:my_order_credit_used}</td>
@@ -54,26 +38,29 @@
 
 					<!--{if $list}-->
 						<!--{eval $i=0;}-->
-						<!--{loop $list $value}-->
-						<tr <!--{if $i%2==0}-->class="a"<!--{/if}--> id="_order_{$value['id']}">
-							<td>$value['tuan']['name']</td>
-							<td>$value['bought_at']</td>
-							<td>$value['payment']['alipay_account']</td>
-							<td>$value['address']</td>
-							<td>$value['paid_at']</td>
-							<td>$value['paid_amount']</td>
-							<td>$value['shipmethod']['name']</td>
-							<td>$value['shipped_at']</td>
-							<td>$value['received_at']</td>
-							<td>$value['product_fee']</td>
-							<td>$value['ship_fee']</td>
-							<td>$value['credit_used']</td>
-							<td>$value['actual_fee']</td>
-							<td>$value['status']</td>
+						<!--{loop $list $order}-->
+						<tr <!--{if $i%2==0}-->class="a"<!--{/if}--> id="_order_{$order['id']}">
+							<td>$order['tuan']['name']</td>
+							<td>$order['bought_at']</td>
+							<td>$order['payment_method']</td>
+							<td>$order['ship_method']</td>
+							<td>$order['sub_total']</td>
+							<td>$order['ship_fee']</td>
+							<td>$order['credit_used']</td>
+							<td>$order['total']</td>
+							<td>$order['status']</td>
 							<td>
-							<a href="plugin.php?id=etuan:my&app=order&op=view&orderid={$value['id']}">{lang etuan:view}</a>
-							<a href="plugin.php?id=etuan:my&app=order&op=confirm_received&orderid={$value['id']}">{lang etuan:confirm_order_received}</a>
-							<a href="plugin.php?id=etuan:my&app=order&op=cancel&orderid={$value['id']}">{lang etuan:cancel_order}</a>
+							<a href="plugin.php?id=etuan:my&app=order&op=view&orderid={$order['id']}">{lang etuan:view}</a>
+							<!--{if $order['status']=='shipped'}-->
+								<a href="plugin.php?id=etuan:my&app=order&op=confirm_received&orderid={$order['id']}">{lang etuan:confirm_order_received}</a>
+							<!--{elseif $order['status']=='pending'}-->
+							<!--{if $order['payment_method'] != 'cod'}-->
+									<a href="plugin.php?id=etuan:my&app=order&op=pay&orderid={$order['id']}">{lang etuan:pay_order}</a>
+								<!--{/if}-->
+								<a href="plugin.php?id=etuan:my&app=order&op=cancel&orderid={$order['id']}">{lang etuan:cancel_order}</a>
+							<!--{/if}-->
+
+
 							</td>
 						</tr>
 						<!--{eval $i++;}-->
