--- a/template/my_order_view.htm
+++ b/template/my_order_view.htm
@@ -1,15 +1,4 @@
 <!--{template common/header}-->
-<style type="text/css">
-.tl{padding-top: 10px;}
-.tl table {width:100%;table-layout:fixed;border-collapse:separate;}
-.tl th,.tl td {padding:12px 0;border-bottom:1px dashed #E5E5E5;}
-.tl tr.a th,.tl tr.a td {background-color: #F7F7F7;	}
-.tl .th {background:#F2F2F2;}
-.tl .th th,.tl .th td{border:none;padding: 8px 0px;}
-.tl .th th,.tl th{padding-left: 10px;}
-.tl td{text-align: center;}
-.actl{table-layout:fixed;margin:10px 0;border-top:3px solid #CDCDCD;}
-</style>
 <div id="pt" class="bm cl">
 	<!--{subtemplate common/simplesearchform}-->
 	<div class="z">
@@ -27,23 +16,88 @@
 			<div class="tl">
 					<table cellspacing="0" cellpadding="0">
 						<tr><td>{lang etuan:my_order_tuan}</td><td>$order['tuan']['name']</td></tr>
+						<tr><td colspan="2">{lang etuan:my_order_items}</td></tr>
+						<tr><td colspan="2">
+							<table cellspacing="0" cellpadding="0">
+								<tr class="th">
+									<td>{lang etuan:my_order_product}</td>
+									<td>{lang etuan:my_order_product_spec}</td>
+									<td>{lang etuan:my_order_quantity}</td>
+									<td>{lang etuan:my_order_unit_price}</td>
+									<td>{lang etuan:my_order_price}</td>
+								</tr>
+								<!--{if $order[items]}-->
+									<!--{loop $order[items] $order_item}-->
+									<tr>
+										<td><img src="$order_item['procut_photo']">{$order_item[product_name]}</td>
+										<td>{$order_item[product_spec]}</td>
+										<td>{$order_item['quantity']}</td>
+										<td class="num">{$order_item['unit_price']}</td>
+										<td class="by">{$order_item['price']}</td>
+									</tr>
+									<!--{/loop}-->
+								<!--{/if}-->
+							</table>
+						</td></tr>
 						<tr><td>{lang etuan:my_order_bought_at}</td><td>$order['bought_at']</td></tr>
-						<tr><td>{lang etuan:my_order_payment}</td><td>$order['payment']['alipay_account']</td></tr>
-						<tr><td>{lang etuan:my_order_address}</td><td>$order['address']</td></tr>
-						<tr><td>{lang etuan:my_order_paid_at}</td><td>$order['paid_at']</td></tr>
-						<tr><td>{lang etuan:my_order_paid_amount}</td><td>$order['paid_amount']</td></tr>
-						<tr><td>{lang etuan:my_order_shipmethod}</td><td>$order['shipmethod']['name']</td></tr>
-						<tr><td>{lang etuan:my_order_shipped_at}</td><td>$order['shipped_at']</td></tr>
-						<tr><td>{lang etuan:my_order_received_at}</td><td>$order['received_at']</td></tr>
-						<tr><td>{lang etuan:my_order_product_fee}</td><td>$order['product_fee']</td></tr>
+
+						<tr><td>{lang etuan:my_order_product_fee}</td><td>$order['sub_total']</td></tr>
 						<tr><td>{lang etuan:my_order_ship_fee}</td><td>$order['ship_fee']</td></tr>
 						<tr><td>{lang etuan:my_order_credit_used}</td><td>$order['credit_used']</td></tr>
-						<tr><td>{lang etuan:my_order_actual_fee}</td><td>$order['actual_fee']</td></tr>
+						<tr><td>{lang etuan:my_order_credit_discount}</td><td>$order['credit_discount']</td></tr>
+						<tr><td>{lang etuan:my_order_actual_fee}</td><td>$order['total']</td></tr>
+						<tr><td>{lang etuan:my_order_payment}</td><td>$order['payment_method']</td></tr>
+						<!--{if $order['paid_at']=='0000-00-00 00:00:00'}-->
+						<tr><td>{lang etuan:my_order_paid_at}</td><td>{lang etuan:my_order_not_paid_yet}</td></tr>
+						<!--{else}-->
+						<tr><td>{lang etuan:my_order_paid_at}</td><td>$order['paid_at']</td></tr>
+						<tr><td>{lang etuan:my_order_paid_amount}</td><td>$order['paid_amount']</td></tr>
+						<tr><td colspan="2">{lang etuan:my_order_payment_log}</td></tr>
+						<tr><td colspan="2">
+							<table cellspacing="0" cellpadding="0">
+								<tr class="th">
+									<td>{lang etuan:payment_log_paid_at}</td>
+									<td>{lang etuan:payment_log_gateway}</td>
+									<td>{lang etuan:payment_log_amount}</td>
+								</tr>
+								<!--{if $order[payment_log]}-->
+									<!--{loop $order[payment_log] $payment_log}-->
+									<tr>
+										<td>{$payment_log[paid_at]}</td>
+										<td>{$payment_log[gateway]}</td>
+										<td>{$payment_log[amount]}</td>
+									</tr>
+									<!--{/loop}-->
+								<!--{/if}-->
+							</table>
+						</td></tr>
+						<!--{/if}-->
+						<tr><td>{lang etuan:my_order_shipmethod}</td><td>$order['ship_method']</td></tr>
+						<tr><td>{lang etuan:my_order_ship_address}</td><td>$order['ship_address']</td></tr>
+						<tr><td>{lang etuan:my_order_ship_community}</td><td>$order['ship_community']['name']</td></tr>
+						<tr><td>{lang etuan:my_order_ship_name}</td><td>$order['ship_name']</td></tr>
+						<tr><td>{lang etuan:my_order_ship_phone}</td><td>$order['ship_phone']</td></tr>
+						<tr><td>{lang etuan:my_order_shipped_at}</td><td>
+						<!--{if $order['shipped_at']=='0000-00-00 00:00:00'}-->
+						{lang etuan:my_order_not_shipped_yet}
+						<!--{else}-->$order['shipped_at']<!--{/if}-->
+						</td></tr>
+						<tr><td>{lang etuan:my_order_received_at}</td><td><!--{if $order['received_at']=='0000-00-00 00:00:00'}-->
+						{lang etuan:my_order_not_received_yet}
+						<!--{else}-->$order['received_at']<!--{/if}--></td></tr>
+
 						<tr><td>{lang etuan:status}</td><td>$order['status']</td></tr>
 						<tr><td>{lang etuan:my_operation}</td><td>
-						<a href="plugin.php?id=etuan:my&app=order&op=view&orderid={$order['id']}">{lang etuan:view}</a>
-						<a href="plugin.php?id=etuan:my&app=order&op=confirm_received&orderid={$order['id']}">{lang etuan:confirm_order_received}</a>
-						<a href="plugin.php?id=etuan:my&app=order&op=cancel&orderid={$order['id']}">{lang etuan:cancel_order}</a>
+
+							<!--{if $order['status']=='shipped'}-->
+								<a href="plugin.php?id=etuan:my&app=order&op=confirm_received&orderid={$order['id']}">{lang etuan:confirm_order_received}</a>
+							<!--{elseif $order['status']=='pending'}-->
+								<!--{if $order['payment_method'] != 'cod'}-->
+									<a href="plugin.php?id=etuan:my&app=order&op=pay&orderid={$order['id']}">{lang etuan:pay_order}</a>
+								<!--{/if}-->
+								<a href="plugin.php?id=etuan:my&app=order&op=cancel&orderid={$order['id']}">{lang etuan:cancel_order}</a>
+							<!--{/if}-->
+
 						</td></tr>
 					</table>
 			</div>
