--- a/template/my_product.htm
+++ b/template/my_product.htm
@@ -1,15 +1,4 @@
 <!--{template common/header}-->
-<style type="text/css">
-.tl{padding-top: 10px;}
-.tl table {width:100%;table-layout:fixed;border-collapse:separate;}
-.tl th,.tl td {padding:12px 0;border-bottom:1px dashed #E5E5E5;}
-.tl tr.a th,.tl tr.a td {background-color: #F7F7F7;	}
-.tl .th {background:#F2F2F2;}
-.tl .th th,.tl .th td{border:none;padding: 8px 0px;}
-.tl .th th,.tl th{padding-left: 10px;}
-.tl td{text-align: center;}
-.actl{table-layout:fixed;margin:10px 0;border-top:3px solid #CDCDCD;}
-</style>
 <div id="pt" class="bm cl">
 	<!--{subtemplate common/simplesearchform}-->
 	<div class="z">
@@ -40,7 +29,6 @@
 							<td>{lang etuan:my_product_price}</td>
 							<td>{lang etuan:my_product_spec}</td>
 							<td>{lang etuan:my_product_unit_name}</td>
-							<td>{lang etuan:my_product_photo}</td>
 							<td>{lang etuan:my_product_description}</td>
 							<td>{lang etuan:my_product_credit_limit}</td>
 							<td>{lang etuan:my_operation}</td>
@@ -50,14 +38,13 @@
 						<!--{eval $i=0;}-->
 						<!--{loop $list $value}-->
 						<tr <!--{if $i%2==0}-->class="a"<!--{/if}--> id="_product_{$value['id']}">
-							<td>$value['supplier']['name']</td>
-							<td>$value['name']</td>
+							<td><img src="$value['supplier']['logo']">$value['supplier']['name']</td>
+							<td><img src="$value['photo']">$value['name']</td>
 							<td>$value['market_price']</td>
 							<td>$value['supply_price']</td>
 							<td>$value['price']</td>
 							<td>$value['spec']</td>
 							<td>$value['unit_name']</td>
-							<td>$value['photo']</td>
 							<td>$value['description']</td>
 							<td>$value['credit_limit']</td>
 							<td><a href="javascript:void(0);" onclick="showWindow('add_product', 'plugin.php?id=etuan:my&app=product&op=edit&productid={$value[id]}', 'get', 0)" class="xi2">{lang edit}</a><span class="pipe">|</span><a href="javascript:void(0);" onclick="delete_product({$value[id]});" class="xi2">{lang delete}</a></td>
